--- a/sorteador-numeros/index.html
+++ b/sorteador-numeros/index.html
@@ -35,12 +35,12 @@
                 </div>
                 
                 <div class="chute container__botoes">
-                    <button onclick="clickSortear()" id="btn-sortear" class="container__botao">Sortear</button>
+                    <button onclick="sortear()" id="btn-sortear" class="container__botao">Sortear</button>
                     <button onclick="reiniciar()" id="btn-reiniciar" class="container__botao-desabilitado" >Reiniciar</button>
                 </div>
 
                 <div class="container__texto" id="resultado">
-                    <label class="texto__paragrafo">Números sorteados:  nenhum até agora</label>
+                    <label class="texto__paragrafo" id="resposta">Números sorteados:  nenhum até agora</label>
                 </div>
             </div>
 
